--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@s-ui/react-atom-input": "1",
+    "@s-ui/react-atom-label": "1",
+    "@s-ui/react-molecule-dropdown-option": "1",
+    "classnames": "^2.2.6",
+    "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
